--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,13 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+.project {
+     background-color: #deebf7;
+     padding: 20px;
+}
+.project p{
+     text-align: center;
+     font-variant: small-caps;
+     font-size: 15pt;
+}
